--- a/languages/cms-tree-page-view-de_DE.po
+++ b/languages/cms-tree-page-view-de_DE.po
@@ -1,163 +1,163 @@
 # Translation of the WordPress plugin   by .
-# Copyright (C) 2010
+# Copyright (C) 2010 
 # This file is distributed under the same license as the  package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, 2010.
 #
+#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: \n"
+"Project-Id-Version:  \n"
 "Report-Msgid-Bugs-To: http://wordpress.org/tag/cms-tree-page-view\n"
 "POT-Creation-Date: 2010-06-30 19:00+0000\n"
-"PO-Revision-Date: 2010-07-01 14:45+0100\n"
-"Last-Translator: Pär Thernström <par.thernstrom@gmail.com>\n"
+"PO-Revision-Date: 2010-07-21 11:30+0200\n"
+"Last-Translator: Thomas Dullnig <thomas.dullnig@sevenspire.com>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Poedit-Language: French\n"
-"X-Poedit-Country: FRANCE\n"
 
 #: functions.php:45
 msgid "Enter title of new page"
-msgstr "Saisissez le titre de la page"
+msgstr "Titel der neuen Seite"
 
 #: functions.php:46
 msgid "child pages"
-msgstr "Pages sous cette page"
+msgstr "Untergeordnete Seiten"
 
 #: functions.php:47
 msgid "Edit page"
-msgstr "Modifier la page"
+msgstr "Seite bearbeiten"
 
 #: functions.php:48
 msgid "View page"
-msgstr "Voir la page"
+msgstr "Seite anzeigen"
 
 #: functions.php:49
 msgid "Edit"
-msgstr "Modifier"
+msgstr "Bearbeiten"
 
 #: functions.php:50
 msgid "View"
-msgstr "Voir"
+msgstr "Anzeigen"
 
 #: functions.php:51
 msgid "Add page"
-msgstr "Ajouter une page"
+msgstr "Seite hinzufügen"
 
 #: functions.php:52
 msgid "Add new page after"
-msgstr "Ajouter une page après cette page"
+msgstr "Neue Seite danach hinzufügen"
 
 #: functions.php:53
 msgid "after"
-msgstr "après"
+msgstr "danach"
 
 #: functions.php:54
 msgid "inside"
-msgstr "sous cette page"
+msgstr "innerhalb"
 
 #: functions.php:55
 msgid "Add new page inside"
-msgstr "Ajouter une page sous cette page"
+msgstr "Neue Seite innerhalb hinzufügen"
 
 #: functions.php:56
 msgid "draft"
-msgstr "brouillon"
+msgstr "Entwurf"
 
 #: functions.php:57
 msgid "future"
-msgstr "planifié"
+msgstr "zukünftig"
 
 #: functions.php:58
 msgid "protected"
-msgstr "protégé"
+msgstr "geschützt"
 
 #: functions.php:59
 msgid "pending"
-msgstr "en attente"
+msgstr "unerledigt"
 
 #: functions.php:60
 msgid "private"
-msgstr "privé"
+msgstr "privat"
 
 #: functions.php:61
 msgid "Password protected page"
-msgstr "Page protégée par mot de passe"
+msgstr "Passwortgeschützte Seite"
 
 #: functions.php:113
 msgid "settings"
-msgstr "paramètres"
+msgstr "Einstellungen"
 
 #: functions.php:120
 msgid "Show tree"
-msgstr "Voir l'arborescence"
+msgstr "Zeige Baum"
 
 #: functions.php:124
 msgid "on the dashboard"
-msgstr "dans le menu"
+msgstr "im Dashboard"
 
 #: functions.php:128
 msgid "under the pages menu"
-msgstr "sous les pages du menu"
+msgstr "im Menüpunkt unter 'Seiten'"
 
 #: functions.php:135
 msgid "Save Changes"
-msgstr "Enregistrer"
+msgstr "Änderungen speichern"
 
 #: functions.php:150
-msgid "No pages found. Maybe you want to <a href='post-new.php?post_type=page'>add a new page</a>?"
-msgstr "Aucune page trouvée. Peut-être voulez-vous <a href='post-new.php?post_type=page'>ajouter une page</a>?"
+msgid ""
+"No pages found. Maybe you want to <a href='post-new.php?post_type=page'>add "
+"a new page</a>?"
+msgstr "Keine Seiten gefunden. Jetzt eine neue Seite <a href='post-new.php?post_type=page'>anlegen</a>?"
 
 #: functions.php:157
 msgid "All"
-msgstr "Toutes les pages"
+msgstr "Alle"
 
 #: functions.php:158
 msgid "Public"
-msgstr "Pages publiées"
+msgstr "Öffentlich"
 
 #: functions.php:160
 msgid "Expand"
-msgstr "Dérouler"
+msgstr "Ausklappen"
 
 #: functions.php:161
 msgid "Collapse"
-msgstr "Refermer"
+msgstr "Einklappen"
 
 #: functions.php:166
 msgid "Clear search"
-msgstr "Effacer la recherche"
+msgstr "Suche leeren"
 
 #: functions.php:167
 msgid "Search"
-msgstr "Rechercher"
+msgstr "Suche"
 
 #: functions.php:168
 msgid "Searching..."
-msgstr "Recherche en cours"
+msgstr "Suche läuft..."
 
 #: functions.php:173
 msgid "Loading..."
-msgstr "Chargement en cours"
+msgstr "Lade..."
 
 #: functions.php:175
 msgid "Search: no pages found"
-msgstr "Recherche : aucune page trouvée"
+msgstr "Suche: keine Seiten gefunden"
 
 #: functions.php:177
 msgid "Loading tree"
-msgstr "Chargement de l'arborescence"
+msgstr "Lade Baum"
 
 #: functions.php:277
 msgid "<Untitled page>"
-msgstr "<Sans-titre>"
+msgstr "<Unbetitelte Seite>"
 
 #: functions.php:295
 msgid "Click to edit. Drag to move."
-msgstr "Cliquez pour modifier, vous pouvez aussi déplacer la page"
+msgstr "Zum Editieren klicken. Zum Bewegen ziehen."
 
 #: functions.php:432
 msgid "New page"
-msgstr "Nouvelle page"
-
+msgstr "Neue Seite"
