--- a/languages/cms-tree-page-view-it_IT.po
+++ b/languages/cms-tree-page-view-it_IT.po
@@ -8,156 +8,168 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: http://wordpress.org/tag/cms-tree-page-view\n"
 "POT-Creation-Date: 2010-06-30 19:00+0000\n"
-"PO-Revision-Date: 2010-07-01 14:45+0100\n"
-"Last-Translator: Pär Thernström <par.thernstrom@gmail.com>\n"
+"PO-Revision-Date: 2011-01-17 19:00+0100\n"
+"Last-Translator: Andrea Bersi\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Poedit-Language: French\n"
-"X-Poedit-Country: FRANCE\n"
+"X-Poedit-Language: Italian\n"
+"X-Poedit-Country: ITALIA\n"
 
 #: functions.php:45
 msgid "Enter title of new page"
-msgstr "Saisissez le titre de la page"
+msgstr "Inserire titolo pagina"
 
 #: functions.php:46
 msgid "child pages"
-msgstr "Pages sous cette page"
+msgstr "Pagine figlie"
 
 #: functions.php:47
 msgid "Edit page"
-msgstr "Modifier la page"
+msgstr "Modifica la pagina"
 
 #: functions.php:48
 msgid "View page"
-msgstr "Voir la page"
+msgstr "Vedi pagina"
 
 #: functions.php:49
 msgid "Edit"
-msgstr "Modifier"
+msgstr "Modifica"
 
 #: functions.php:50
 msgid "View"
-msgstr "Voir"
+msgstr "Vedi"
 
 #: functions.php:51
 msgid "Add page"
-msgstr "Ajouter une page"
+msgstr "Aggiungi nuova pagina"
 
 #: functions.php:52
 msgid "Add new page after"
-msgstr "Ajouter une page après cette page"
+msgstr "Aggiungi dopo la pagina"
 
 #: functions.php:53
 msgid "after"
-msgstr "après"
+msgstr "dopo"
 
 #: functions.php:54
 msgid "inside"
-msgstr "sous cette page"
+msgstr "all'interno della pagina"
 
 #: functions.php:55
 msgid "Add new page inside"
-msgstr "Ajouter une page sous cette page"
+msgstr "Aggiungi pagina figlia"
 
 #: functions.php:56
 msgid "draft"
-msgstr "brouillon"
+msgstr "Bozza"
 
 #: functions.php:57
 msgid "future"
-msgstr "planifié"
+msgstr "pianificata"
 
 #: functions.php:58
 msgid "protected"
-msgstr "protégé"
+msgstr "protetta"
 
 #: functions.php:59
 msgid "pending"
-msgstr "en attente"
+msgstr "in attesa"
 
 #: functions.php:60
 msgid "private"
-msgstr "privé"
+msgstr "privata"
 
 #: functions.php:61
 msgid "Password protected page"
-msgstr "Page protégée par mot de passe"
+msgstr "Pagina protetta da password"
 
 #: functions.php:113
 msgid "settings"
-msgstr "paramètres"
+msgstr "impostazioni"
 
 #: functions.php:120
 msgid "Show tree"
-msgstr "Voir l'arborescence"
+msgstr "Mostra gerarchia"
 
 #: functions.php:124
 msgid "on the dashboard"
-msgstr "dans le menu"
+msgstr "nella bacheca"
 
 #: functions.php:128
 msgid "under the pages menu"
-msgstr "sous les pages du menu"
+msgstr "nel menù delle pagine"
 
 #: functions.php:135
 msgid "Save Changes"
-msgstr "Enregistrer"
+msgstr "Salva"
 
 #: functions.php:150
 msgid "No pages found. Maybe you want to <a href='post-new.php?post_type=page'>add a new page</a>?"
-msgstr "Aucune page trouvée. Peut-être voulez-vous <a href='post-new.php?post_type=page'>ajouter une page</a>?"
+msgstr "Nessuna pagina. Vuoi <a href='post-new.php?post_type=page'>creare una pagina</a>?"
 
 #: functions.php:157
 msgid "All"
-msgstr "Toutes les pages"
+msgstr "Tutte le pagine"
 
 #: functions.php:158
 msgid "Public"
-msgstr "Pages publiées"
+msgstr "Pagine pubblicate"
 
 #: functions.php:160
 msgid "Expand"
-msgstr "Dérouler"
+msgstr "Espandi"
 
 #: functions.php:161
 msgid "Collapse"
-msgstr "Refermer"
+msgstr "Contrai"
 
 #: functions.php:166
 msgid "Clear search"
-msgstr "Effacer la recherche"
+msgstr "Cancella risultati ricerca"
 
 #: functions.php:167
 msgid "Search"
-msgstr "Rechercher"
+msgstr "Ricerca"
 
 #: functions.php:168
 msgid "Searching..."
-msgstr "Recherche en cours"
+msgstr "Ricerca..."
 
 #: functions.php:173
 msgid "Loading..."
-msgstr "Chargement en cours"
+msgstr "Caricamento..."
 
 #: functions.php:175
 msgid "Search: no pages found"
-msgstr "Recherche : aucune page trouvée"
+msgstr "Ricerca: nessuna pagina trovata"
 
 #: functions.php:177
 msgid "Loading tree"
-msgstr "Chargement de l'arborescence"
+msgstr "Caricamento gerarchia"
 
 #: functions.php:277
 msgid "<Untitled page>"
-msgstr "<Sans-titre>"
+msgstr "<Nessun titolo>"
 
 #: functions.php:295
 msgid "Click to edit. Drag to move."
-msgstr "Cliquez pour modifier, vous pouvez aussi déplacer la page"
+msgstr "Clicca per modificare o per variare la gerarchia"
 
 #: functions.php:432
 msgid "New page"
-msgstr "Nouvelle page"
+msgstr "Nuova pagina"
+
+#: functions.php:395
+msgid "Last modified"
+msgstr "Modificato il"
+
+#: functions.php:384
+msgid "After"
+msgstr "dopo"
+
+#: functions.php:388
+msgid "Inside"
+msgstr "all'interno della pagina"
 
