--- a/languages/cms-tree-page-view-hu_HU.po
+++ b/languages/cms-tree-page-view-hu_HU.po
@@ -8,156 +8,154 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: http://wordpress.org/tag/cms-tree-page-view\n"
 "POT-Creation-Date: 2010-06-30 19:00+0000\n"
-"PO-Revision-Date: 2010-07-01 14:45+0100\n"
-"Last-Translator: Pär Thernström <par.thernstrom@gmail.com>\n"
+"PO-Revision-Date: 2011-03-08 19:52+0100\n"
+"Last-Translator: Szijártó József <hutchington@gmail.com>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Poedit-Language: French\n"
-"X-Poedit-Country: FRANCE\n"
 
 #: functions.php:45
 msgid "Enter title of new page"
-msgstr "Saisissez le titre de la page"
+msgstr "Új oldal címének megadása"
 
 #: functions.php:46
 msgid "child pages"
-msgstr "Pages sous cette page"
+msgstr "aloldalak"
 
 #: functions.php:47
 msgid "Edit page"
-msgstr "Modifier la page"
+msgstr "Oldal szerkesztése"
 
 #: functions.php:48
 msgid "View page"
-msgstr "Voir la page"
+msgstr "Oldal megtekintése"
 
 #: functions.php:49
 msgid "Edit"
-msgstr "Modifier"
+msgstr "Szerkeszt"
 
 #: functions.php:50
 msgid "View"
-msgstr "Voir"
+msgstr "Megtekint"
 
 #: functions.php:51
 msgid "Add page"
-msgstr "Ajouter une page"
+msgstr "Oldal hozzáadása"
 
 #: functions.php:52
 msgid "Add new page after"
-msgstr "Ajouter une page après cette page"
+msgstr "Oldal hozzáadása ezután"
 
 #: functions.php:53
 msgid "after"
-msgstr "après"
+msgstr "utána"
 
 #: functions.php:54
 msgid "inside"
-msgstr "sous cette page"
+msgstr "belső"
 
 #: functions.php:55
 msgid "Add new page inside"
-msgstr "Ajouter une page sous cette page"
+msgstr "Új oldal bele"
 
 #: functions.php:56
 msgid "draft"
-msgstr "brouillon"
+msgstr "Vázlat"
 
 #: functions.php:57
 msgid "future"
-msgstr "planifié"
+msgstr "jövő"
 
 #: functions.php:58
 msgid "protected"
-msgstr "protégé"
+msgstr "védett"
 
 #: functions.php:59
 msgid "pending"
-msgstr "en attente"
+msgstr "függőben"
 
 #: functions.php:60
 msgid "private"
-msgstr "privé"
+msgstr "privát"
 
 #: functions.php:61
 msgid "Password protected page"
-msgstr "Page protégée par mot de passe"
+msgstr "Jelszóval védett"
 
 #: functions.php:113
 msgid "settings"
-msgstr "paramètres"
+msgstr "beállítások"
 
 #: functions.php:120
 msgid "Show tree"
-msgstr "Voir l'arborescence"
+msgstr "Fa mutatása"
 
 #: functions.php:124
 msgid "on the dashboard"
-msgstr "dans le menu"
+msgstr "a Vezérlőpulton"
 
 #: functions.php:128
 msgid "under the pages menu"
-msgstr "sous les pages du menu"
+msgstr "az oldalak menüje alatt"
 
 #: functions.php:135
 msgid "Save Changes"
-msgstr "Enregistrer"
+msgstr "Változtatások mentése"
 
 #: functions.php:150
 msgid "No pages found. Maybe you want to <a href='post-new.php?post_type=page'>add a new page</a>?"
-msgstr "Aucune page trouvée. Peut-être voulez-vous <a href='post-new.php?post_type=page'>ajouter une page</a>?"
+msgstr "Nem található az oldal. Szeretnél hozzáadni egy <a href='post-new.php?post_type=page'>új oldalt</a>?"
 
 #: functions.php:157
 msgid "All"
-msgstr "Toutes les pages"
+msgstr "Összes"
 
 #: functions.php:158
 msgid "Public"
-msgstr "Pages publiées"
+msgstr "Publikus"
 
 #: functions.php:160
 msgid "Expand"
-msgstr "Dérouler"
+msgstr "Kibont"
 
 #: functions.php:161
 msgid "Collapse"
-msgstr "Refermer"
+msgstr "Becsuk"
 
 #: functions.php:166
 msgid "Clear search"
-msgstr "Effacer la recherche"
+msgstr "Keresés törlése"
 
 #: functions.php:167
 msgid "Search"
-msgstr "Rechercher"
+msgstr "Keresés"
 
 #: functions.php:168
 msgid "Searching..."
-msgstr "Recherche en cours"
+msgstr "Keresés..."
 
 #: functions.php:173
 msgid "Loading..."
-msgstr "Chargement en cours"
+msgstr "Betöltés..."
 
 #: functions.php:175
 msgid "Search: no pages found"
-msgstr "Recherche : aucune page trouvée"
+msgstr "Keresés: nem találhatók oldalak"
 
 #: functions.php:177
 msgid "Loading tree"
-msgstr "Chargement de l'arborescence"
+msgstr "Fa betöltése"
 
 #: functions.php:277
 msgid "<Untitled page>"
-msgstr "<Sans-titre>"
+msgstr "<Névtelen oldal>"
 
 #: functions.php:295
 msgid "Click to edit. Drag to move."
-msgstr "Cliquez pour modifier, vous pouvez aussi déplacer la page"
+msgstr "Kattints a szerkesztésért. Fogd a mozgatásért."
 
 #: functions.php:432
 msgid "New page"
-msgstr "Nouvelle page"
+msgstr "Új oldal"
 
