--- a/languages/cms-tree-page-view-de_DE.po
+++ b/languages/cms-tree-page-view-de_DE.po
@@ -1,163 +1,271 @@
 # Translation of the WordPress plugin   by .
-# Copyright (C) 2010 
+# Copyright (C) 2010
 # This file is distributed under the same license as the  package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, 2010.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version:  \n"
+"Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: http://wordpress.org/tag/cms-tree-page-view\n"
-"POT-Creation-Date: 2010-06-30 19:00+0000\n"
-"PO-Revision-Date: 2010-07-21 11:30+0200\n"
-"Last-Translator: Thomas Dullnig <thomas.dullnig@sevenspire.com>\n"
+"POT-Creation-Date: 2011-03-06 14:33:36+00:00\n"
+"PO-Revision-Date: 2012-02-26 16:01+0100\n"
+"Last-Translator: Martin Lettner <m.lettner@gmail.com>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=utf-8\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-#: functions.php:45
+#: functions.php:53
 msgid "Enter title of new page"
-msgstr "Titel der neuen Seite"
+msgstr "Titel der neuen Seite eingeben:"
 
-#: functions.php:46
+#: functions.php:54
 msgid "child pages"
-msgstr "Untergeordnete Seiten"
+msgstr "untergeordnete Seiten"
 
-#: functions.php:47
+#: functions.php:55
+#: functions.php:381
 msgid "Edit page"
-msgstr "Seite bearbeiten"
+msgstr "Diese Seite bearbeiten"
 
-#: functions.php:48
+#: functions.php:56
+#: functions.php:382
 msgid "View page"
-msgstr "Seite anzeigen"
+msgstr "Diese Seite anzeigen"
 
-#: functions.php:49
+#: functions.php:57
+#: functions.php:381
 msgid "Edit"
 msgstr "Bearbeiten"
 
-#: functions.php:50
+#: functions.php:58
+#: functions.php:382
 msgid "View"
 msgstr "Anzeigen"
 
-#: functions.php:51
+#: functions.php:59
 msgid "Add page"
 msgstr "Seite hinzufügen"
 
-#: functions.php:52
+#: functions.php:60
+#: functions.php:386
 msgid "Add new page after"
-msgstr "Neue Seite danach hinzufügen"
+msgstr "Eine neue Seite nach dieser hinzufügen"
 
-#: functions.php:53
+#: functions.php:61
 msgid "after"
-msgstr "danach"
+msgstr "Danach"
 
-#: functions.php:54
+#: functions.php:62
 msgid "inside"
-msgstr "innerhalb"
+msgstr "Innerhalb"
 
-#: functions.php:55
+#: functions.php:63
+msgid "Sorry, can't create a sub page to a page with status \"draft\"."
+msgstr "Entschuldigung, es kann keine Unterseite zu einer Seite mit dem Status \"Entwurf\" hinzugefügt werden."
+
+#: functions.php:64
+msgid "Sorry, can't create a sub page to a page with status \"trash\"."
+msgstr "Entschuldigung, es kann keine Unterseite zu einer Seite mit dem Status \"Papierkorb\" hinzugefügt werden."
+
+#: functions.php:65
+msgid "Sorry, can't create a page after a page with status \"trash\"."
+msgstr "Entschuldigung, es kann keine Seite nach einer Seite mit dem Status \"Papierkorb\" hinzugefügt werden."
+
+#: functions.php:66
+#: functions.php:390
 msgid "Add new page inside"
-msgstr "Neue Seite innerhalb hinzufügen"
+msgstr "Eine neue Seite innerhalb dieser hinzufügen"
 
-#: functions.php:56
+#: functions.php:67
 msgid "draft"
 msgstr "Entwurf"
 
-#: functions.php:57
+#: functions.php:68
 msgid "future"
-msgstr "zukünftig"
+msgstr "Geplant"
 
-#: functions.php:58
+#: functions.php:69
 msgid "protected"
-msgstr "geschützt"
+msgstr "Geschützt"
 
-#: functions.php:59
+#: functions.php:70
+#: functions.php:644
 msgid "pending"
-msgstr "unerledigt"
+msgstr "Offen"
 
-#: functions.php:60
+#: functions.php:71
 msgid "private"
-msgstr "privat"
+msgstr "Privat"
 
-#: functions.php:61
+#: functions.php:72
+msgid "trash"
+msgstr "In den Papierkorb verschieben"
+
+#: functions.php:73
 msgid "Password protected page"
 msgstr "Passwortgeschützte Seite"
 
-#: functions.php:113
+#: functions.php:74
+msgid "Adding page..."
+msgstr "Seite wird hinzugefügt..."
+
+#: functions.php:175
 msgid "settings"
 msgstr "Einstellungen"
 
-#: functions.php:120
-msgid "Show tree"
-msgstr "Zeige Baum"
+#: functions.php:180
+msgid "Select where to show a tree for pages and custom post types"
+msgstr "Auswählen wo eine Baumansicht für Seiten und Artikel angezeigt werden soll:"
 
-#: functions.php:124
-msgid "on the dashboard"
-msgstr "im Dashboard"
+#: functions.php:204
+msgid "On dashboard"
+msgstr "Im Dashboard"
 
-#: functions.php:128
-msgid "under the pages menu"
-msgstr "im Menüpunkt unter 'Seiten'"
+#: functions.php:208
+msgid "In menu"
+msgstr "Im Menü"
 
-#: functions.php:135
+#: functions.php:219
 msgid "Save Changes"
 msgstr "Änderungen speichern"
 
-#: functions.php:150
-msgid ""
-"No pages found. Maybe you want to <a href='post-new.php?post_type=page'>add "
-"a new page</a>?"
-msgstr "Keine Seiten gefunden. Jetzt eine neue Seite <a href='post-new.php?post_type=page'>anlegen</a>?"
+#: functions.php:335
+msgid "No posts found."
+msgstr "Keine Artikel gefunden."
 
-#: functions.php:157
+#: functions.php:341
 msgid "All"
 msgstr "Alle"
 
-#: functions.php:158
+#: functions.php:342
 msgid "Public"
 msgstr "Öffentlich"
 
-#: functions.php:160
+#: functions.php:343
+msgid "Trash"
+msgstr "Papierkorb"
+
+#: functions.php:348
 msgid "Expand"
 msgstr "Ausklappen"
 
-#: functions.php:161
+#: functions.php:349
 msgid "Collapse"
 msgstr "Einklappen"
 
-#: functions.php:166
+#: functions.php:357
 msgid "Clear search"
 msgstr "Suche leeren"
 
-#: functions.php:167
+#: functions.php:358
 msgid "Search"
-msgstr "Suche"
+msgstr "Suchen"
 
-#: functions.php:168
+#: functions.php:359
 msgid "Searching..."
-msgstr "Suche läuft..."
+msgstr "Wird gesucht..."
 
-#: functions.php:173
+#: functions.php:360
+msgid "Nothing found."
+msgstr "Keine Inhalte gefunden."
+
+#: functions.php:366
 msgid "Loading..."
-msgstr "Lade..."
+msgstr "Laden..."
 
-#: functions.php:175
+#: functions.php:371
 msgid "Search: no pages found"
-msgstr "Suche: keine Seiten gefunden"
+msgstr "Suche: Keine Seiten gefunden"
 
-#: functions.php:177
+#: functions.php:374
 msgid "Loading tree"
-msgstr "Lade Baum"
+msgstr "Baum wird geladen"
 
-#: functions.php:277
+#: functions.php:386
+msgid "After"
+msgstr "Danach"
+
+#: functions.php:390
+msgid "Inside"
+msgstr "Innerhalb"
+
+#: functions.php:394
+msgid "Can not create page inside of a page with draft status"
+msgstr "Es kann keine Seite innerhalb einer Seite mit Entwurfs-Status erstellt werden."
+
+#: functions.php:397
+msgid "Last modified"
+msgstr "Zuletzt modifiziert"
+
+#: functions.php:399
+msgid "by"
+msgstr "von"
+
+#: functions.php:402
+msgid "Page ID"
+msgstr "Seiten-ID"
+
+#: functions.php:609
+msgid "Unknown user"
+msgstr "Unbekannter Benutzer"
+
+#: functions.php:614
 msgid "<Untitled page>"
-msgstr "<Unbetitelte Seite>"
+msgstr "<Unbenannte Seite>"
 
-#: functions.php:295
+#: functions.php:634
+msgid "Comments"
+msgstr "Kommentare"
+
+#: functions.php:641
+msgid "%s pending"
+msgstr "%s offen"
+
+#: functions.php:651
+msgctxt "comment count"
+msgid "0"
+msgstr "0"
+
+#: functions.php:651
+msgctxt "comment count"
+msgid "1"
+msgstr "1"
+
+#: functions.php:651
+msgctxt "comment count"
+msgid "%"
+msgstr "%"
+
+#: functions.php:682
 msgid "Click to edit. Drag to move."
 msgstr "Zum Editieren klicken. Zum Bewegen ziehen."
 
-#: functions.php:432
+#: functions.php:833
 msgid "New page"
 msgstr "Neue Seite"
+
+#: functions.php:1015
+msgid "Close"
+msgstr "Schließen"
+
+#: functions.php:1016
+msgid "<strong>Thank you for using this plugin!</strong> If you need help please check out the <a href=\"http://eskapism.se/code-playground/cms-tree-page-view/?utm_source=wordpress&utm_medium=banner&utm_campaign=promobox\">plugin homepage</a> or the <a href=\"http://wordpress.org/tags/cms-tree-page-view?forum_id=10\">support forum</a>."
+msgstr "<strong>Vielen Dank, dass Sie dieses Plugin verwenden!</strong> Falls Sie Hilfe benötigen schauen Sie auf der <a href=\"http://eskapism.se/code-playground/cms-tree-page-view/?utm_source=wordpress&utm_medium=banner&utm_campaign=promobox\">Plugin-Homepage [en]</a> oder im <a href=\"http://wordpress.org/tags/cms-tree-page-view?forum_id=10\">Support-Forum [en]</a> nach."
+
+#: functions.php:1017
+msgid "If you like this plugin, please <a href=\"http://eskapism.se/sida/donate/?utm_source=wordpress&utm_medium=banner&utm_campaign=promobox\">support my work by donating</a> - or at least say something nice about this plugin in a blog post or tweet."
+msgstr "Falls Sie dieses Plugin nützlich finden, bitte <a href=\"http://eskapism.se/sida/donate/?utm_source=wordpress&utm_medium=banner&utm_campaign=promobox\">unterstützen Sie meine Arbeit mit einer Spende</a> - oder hinterlassen Sie eine freundliche Nachricht über das Plugin in einer Blog- oder Twitter-Nachricht."
+
+#~ msgid "Show tree"
+#~ msgstr "Zeige Baum"
+
+#~ msgid "under the pages menu"
+#~ msgstr "im Menüpunkt unter 'Seiten'"
+
+#~ msgid ""
+#~ "No pages found. Maybe you want to <a href='post-new.php?"
+#~ "post_type=page'>add a new page</a>?"
+#~ msgstr ""
+#~ "Keine Seiten gefunden. Jetzt eine neue Seite <a href='post-new.php?"
+#~ "post_type=page'>anlegen</a>?"
