--- a/languages/cms-tree-page-view-ru_RU.po
+++ b/languages/cms-tree-page-view-ru_RU.po
@@ -1,133 +1,363 @@
-# Translation of the WordPress plugin   by .
-# Copyright (C) 2010
+# Copyright (C) 2012 
 # This file is distributed under the same license as the  package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, 2010.
-#
 msgid ""
 msgstr ""
 "Project-Id-Version: CTPV\n"
 "Report-Msgid-Bugs-To: http://wordpress.org/tag/cms-tree-page-view\n"
-"POT-Creation-Date: 2010-04-09 11:39+0000\n"
-"PO-Revision-Date: 2010-05-24 15:24+0300\n"
-"Last-Translator: Александр <alexufo@mail.ru>\n"
-"Language-Team: Marcis G. <alexufo@mail.ru>\n"
+"POT-Creation-Date: 2012-12-19 22:59+0400\n"
+"PO-Revision-Date: 2012-12-19 23:00+0400\n"
+"Last-Translator: Вадим <vadim.bogaiskov@gmail.com>\n"
+"Language-Team: \n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=utf-8\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Poedit-Language: Russian\n"
-"X-Poedit-Country: RUSSIAN FEDERATION\n"
-"X-Poedit-SourceCharset: utf8\n"
+"X-Generator: Poedit 1.5.4\n"
+"X-Poedit-Basepath: E:\\Translate WP\\cms-tree-page-view\n"
+"X-Poedit-KeywordsList: _e;_x;__\n"
+"X-Poedit-SourceCharset: UTF-8\n"
+"X-Poedit-SearchPath-0: E:\\Translate WP\\cms-tree-page-view\n"
 
-#: functions.php:84
-msgid "settings"
-msgstr "Настройки"
-
-#: functions.php:91
-msgid "Show tree"
-msgstr "Показывать плагин"
-
-#: functions.php:95
-msgid "on the dashboard"
-msgstr "на панел"
-
-#: functions.php:98
-msgid "under the pages menu"
-msgstr " в разделе \"Страницы\""
-
-#: functions.php:105
-msgid "Save Changes"
-msgstr "Сохранить изменения"
-
-#: functions.php:127
-msgid "All"
-msgstr "Все"
-
-#: functions.php:128
-msgid "Public"
-msgstr "Опубликованные"
-
-#: functions.php:130
-msgid "Expand"
-msgstr "Раскрыть"
-
-#: functions.php:131
-msgid "Collapse"
-msgstr "Собрать"
-
-#: functions.php:136
-msgid "Search"
-msgstr "Поиск"
-
-#: functions.php:137
-msgid "Searching..."
-msgstr "Поиск..."
-
-#: functions.php:142
-msgid "Loading..."
-msgstr "Загрузка..."
-
-#: functions.php:144
-msgid "Search: no pages found"
-msgstr "Поиск: страниц не найдено"
-
-#: functions.php:146
-msgid "Loading tree"
-msgstr "Загрузка дерева"
-
-#: functions.php:248
-msgid "<Untitled page>"
-msgstr "<Без имени>"
-
-#: functions.php:264
-msgid "Click to edit. Drag to move."
-msgstr "Щелчок для правки. Схватить для перемещения."
-
-#: functions.php:380
-msgid "New page"
-msgstr "Новая страница"
-
-#: scripts/cms_tree_page_view.php:85
-#: scripts/cms_tree_page_view.php:102
+#: E:\Translate WP\cms-tree-page-view/functions.php:259
 msgid "Enter title of new page"
-msgstr "Введите имя новой страницы"
+msgstr "Введите название новой страницы"
 
-#: scripts/cms_tree_page_view.php:283
+#: E:\Translate WP\cms-tree-page-view/functions.php:260
 msgid "child pages"
-msgstr "Дочерние сраницы"
+msgstr "дочерние страницы"
 
-#: scripts/cms_tree_page_view.php:293
+#: E:\Translate WP\cms-tree-page-view/functions.php:261
+#: WP\cms-tree-page-view/functions.php:719
 msgid "Edit page"
-msgstr "Править  страницу"
+msgstr "Редактировать страницу"
 
-#: scripts/cms_tree_page_view.php:293
-msgid "Edit"
-msgstr "Правка"
-
-#: scripts/cms_tree_page_view.php:294
+#: E:\Translate WP\cms-tree-page-view/functions.php:262
+#: WP\cms-tree-page-view/functions.php:720
 msgid "View page"
-msgstr "Смотреть страницу"
+msgstr "Просмотр страницы"
 
-#: scripts/cms_tree_page_view.php:294
+#: E:\Translate WP\cms-tree-page-view/functions.php:263
+#: WP\cms-tree-page-view/functions.php:719
+msgid "Edit"
+msgstr "Изменить"
+
+#: E:\Translate WP\cms-tree-page-view/functions.php:264
+#: WP\cms-tree-page-view/functions.php:720
 msgid "View"
-msgstr "Смотреть"
+msgstr "Показать"
 
-#: scripts/cms_tree_page_view.php:296
+#: E:\Translate WP\cms-tree-page-view/functions.php:265
 msgid "Add page"
 msgstr "Добавить страницу"
 
-#: scripts/cms_tree_page_view.php:297
+#: E:\Translate WP\cms-tree-page-view/functions.php:266
+#: WP\cms-tree-page-view/functions.php:728
 msgid "Add new page after"
-msgstr "Добавить новую страницу ниже"
+msgstr "Добавить новую страницу после"
 
-#: scripts/cms_tree_page_view.php:297
+#: E:\Translate WP\cms-tree-page-view/functions.php:267
 msgid "after"
-msgstr "ниже"
+msgstr "после"
 
-#: scripts/cms_tree_page_view.php:298
-msgid "Add new page inside"
-msgstr "Добавить новую страницу внутри"
-
-#: scripts/cms_tree_page_view.php:298
+#: E:\Translate WP\cms-tree-page-view/functions.php:268
 msgid "inside"
 msgstr "внутри"
 
+#: E:\Translate WP\cms-tree-page-view/functions.php:269
+msgid "Sorry, can't create a sub page to a page with status \"draft\"."
+msgstr ""
+"К сожалению, невозможно создать подстраницу для страницы со статусом  "
+"\"черновик \"."
+
+#: E:\Translate WP\cms-tree-page-view/functions.php:270
+msgid "Sorry, can't create a sub page to a page with status \"trash\"."
+msgstr ""
+"К сожалению, невозможно создать подстраницу для страницы со статусом  \"в "
+"корзине \"."
+
+#: E:\Translate WP\cms-tree-page-view/functions.php:271
+msgid "Sorry, can't create a page after a page with status \"trash\"."
+msgstr ""
+"К сожалению, невозможно создать страницу после страницы со статусом  \"в "
+"корзине \"."
+
+#: E:\Translate WP\cms-tree-page-view/functions.php:272
+#: WP\cms-tree-page-view/functions.php:733
+msgid "Add new page inside"
+msgstr "Добавить новую страницу внутри"
+
+#: E:\Translate WP\cms-tree-page-view/functions.php:273
+#: WP\cms-tree-page-view/functions.php:279
+msgid "draft"
+msgstr "черновик"
+
+#: E:\Translate WP\cms-tree-page-view/functions.php:274
+#: WP\cms-tree-page-view/functions.php:280
+msgid "future"
+msgstr "будущая"
+
+#: E:\Translate WP\cms-tree-page-view/functions.php:275
+#: WP\cms-tree-page-view/functions.php:281
+msgid "protected"
+msgstr "защищенная"
+
+#: E:\Translate WP\cms-tree-page-view/functions.php:276
+#: WP\cms-tree-page-view/functions.php:282
+#: WP\cms-tree-page-view/functions.php:1068
+msgid "pending"
+msgstr "в ожидании"
+
+#: E:\Translate WP\cms-tree-page-view/functions.php:277
+#: WP\cms-tree-page-view/functions.php:283
+msgid "private"
+msgstr "личная"
+
+#: E:\Translate WP\cms-tree-page-view/functions.php:278
+#: WP\cms-tree-page-view/functions.php:284
+msgid "trash"
+msgstr "в корзине"
+
+#: E:\Translate WP\cms-tree-page-view/functions.php:285
+msgid "Password protected page"
+msgstr "Страница защищенная паролем"
+
+#: E:\Translate WP\cms-tree-page-view/functions.php:286
+msgid "Adding page..."
+msgstr "Добавление пароля..."
+
+#: E:\Translate WP\cms-tree-page-view/functions.php:287
+msgid "Adding ..."
+msgstr "Добавление ..."
+
+#: E:\Translate WP\cms-tree-page-view/functions.php:317
+msgid "Settings"
+msgstr "Настройки"
+
+#: E:\Translate WP\cms-tree-page-view/functions.php:373
+msgid "Tree View"
+msgstr "Tree View"
+
+#: E:\Translate WP\cms-tree-page-view/functions.php:393
+msgid "settings"
+msgstr "настройки"
+
+#: E:\Translate WP\cms-tree-page-view/functions.php:398
+msgid "Select where to show a tree for pages and custom post types"
+msgstr "Укажите где показать дерево страниц и пользовательских типов записей"
+
+#: E:\Translate WP\cms-tree-page-view/functions.php:424
+msgid "On dashboard"
+msgstr "На консоли"
+
+#: E:\Translate WP\cms-tree-page-view/functions.php:428
+msgid "In menu"
+msgstr "В меню"
+
+#: E:\Translate WP\cms-tree-page-view/functions.php:439
+msgid "Save Changes"
+msgstr "Сохранить изменения"
+
+#: E:\Translate WP\cms-tree-page-view/functions.php:648
+msgid "No posts found."
+msgstr "Записи не нейдены."
+
+#: E:\Translate WP\cms-tree-page-view/functions.php:660
+msgid "All"
+msgstr "Все"
+
+#: E:\Translate WP\cms-tree-page-view/functions.php:666
+msgid "Public"
+msgstr "Опубликованные"
+
+#: E:\Translate WP\cms-tree-page-view/functions.php:672
+msgid "Trash"
+msgstr "Корзина"
+
+#: E:\Translate WP\cms-tree-page-view/functions.php:680
+msgid "Expand"
+msgstr "Раскрыть"
+
+#: E:\Translate WP\cms-tree-page-view/functions.php:681
+msgid "Collapse"
+msgstr "Свернуть"
+
+#: E:\Translate WP\cms-tree-page-view/functions.php:689
+msgid "Clear search"
+msgstr "Очистить поиск"
+
+#: E:\Translate WP\cms-tree-page-view/functions.php:690
+msgid "Search"
+msgstr "Поиск"
+
+#: E:\Translate WP\cms-tree-page-view/functions.php:691
+msgid "Searching..."
+msgstr "Поиск..."
+
+#: E:\Translate WP\cms-tree-page-view/functions.php:692
+msgid "Nothing found."
+msgstr "Ничего не найдено."
+
+#: E:\Translate WP\cms-tree-page-view/functions.php:699
+msgid "Loading..."
+msgstr "Загрузка..."
+
+#: E:\Translate WP\cms-tree-page-view/functions.php:704
+msgid "Search: no pages found"
+msgstr "Поиск: страницы не найдены"
+
+#: E:\Translate WP\cms-tree-page-view/functions.php:707
+msgid "Loading tree"
+msgstr "Загрузка дерева"
+
+#: E:\Translate WP\cms-tree-page-view/functions.php:728
+#: WP\cms-tree-page-view/functions.php:764
+msgid "After"
+msgstr "После"
+
+#: E:\Translate WP\cms-tree-page-view/functions.php:733
+#: WP\cms-tree-page-view/functions.php:765
+msgid "Inside"
+msgstr "Внутри"
+
+#: E:\Translate WP\cms-tree-page-view/functions.php:737
+msgid "Can not create page inside of a page with draft status"
+msgstr "Невозможно создать страницу внутри страницы со статусом /\"черновик/\""
+
+#: E:\Translate WP\cms-tree-page-view/functions.php:753
+msgid "Add page(s)"
+msgstr "Добавить страницу(ы)"
+
+#: E:\Translate WP\cms-tree-page-view/functions.php:758
+msgid "Enter title here"
+msgstr "Введите название здесь"
+
+#: E:\Translate WP\cms-tree-page-view/functions.php:763
+msgid "Position"
+msgstr "Положение"
+
+#: E:\Translate WP\cms-tree-page-view/functions.php:770
+msgid "Status"
+msgstr "Состояние"
+
+#: E:\Translate WP\cms-tree-page-view/functions.php:771
+msgid "Draft"
+msgstr "Черновик"
+
+#: E:\Translate WP\cms-tree-page-view/functions.php:772
+msgid "Published"
+msgstr "Опубликовано"
+
+#: E:\Translate WP\cms-tree-page-view/functions.php:776
+msgid "Add"
+msgstr "Добавить"
+
+#: E:\Translate WP\cms-tree-page-view/functions.php:777
+msgid "or"
+msgstr "или"
+
+#: E:\Translate WP\cms-tree-page-view/functions.php:778
+msgid "cancel"
+msgstr "отмена"
+
+#: E:\Translate WP\cms-tree-page-view/functions.php:788
+msgid "Last modified"
+msgstr "Последнее изменение"
+
+#: E:\Translate WP\cms-tree-page-view/functions.php:790
+msgid "by"
+msgstr "-"
+
+#: E:\Translate WP\cms-tree-page-view/functions.php:793
+msgid "Page ID"
+msgstr "ID страницы"
+
+#: E:\Translate WP\cms-tree-page-view/functions.php:1033
+msgid "Unknown user"
+msgstr "Неизвестный пользователь"
+
+#: E:\Translate WP\cms-tree-page-view/functions.php:1038
+msgid "<Untitled page>"
+msgstr "<Страница без названия>"
+
+#: E:\Translate WP\cms-tree-page-view/functions.php:1058
+msgid "Comments"
+msgstr "Комментарии"
+
+#: E:\Translate WP\cms-tree-page-view/functions.php:1065
+#, php-format
+msgid "%s pending"
+msgstr "%s в ожидании"
+
+#: E:\Translate WP\cms-tree-page-view/functions.php:1075
+msgid "0"
+msgstr "0"
+
+#: E:\Translate WP\cms-tree-page-view/functions.php:1075
+msgid "1"
+msgstr "1"
+
+#: E:\Translate WP\cms-tree-page-view/functions.php:1075
+msgid "%"
+msgstr "%"
+
+#: E:\Translate WP\cms-tree-page-view/functions.php:1260
+msgid "New page"
+msgstr "Новая страница"
+
+#: E:\Translate WP\cms-tree-page-view/functions.php:1450
+msgid "Thanks for using my plugin"
+msgstr "Спасибо за использование моего плагина"
+
+#: E:\Translate WP\cms-tree-page-view/functions.php:1452
+msgid ""
+"Hi there! I just wanna says thanks for using my plugin. I hope you like it "
+"as much as I do."
+msgstr ""
+"Привет! Я просто хочу, сказать спасибо за использование моего плагина. Я "
+"надеюсь, что Вам он нравится так же, как и мне."
+
+#: E:\Translate WP\cms-tree-page-view/functions.php:1453
+msgid "/Pär Thernström - plugin creator"
+msgstr "/Pär Thernström - создатель плагина"
+
+#: E:\Translate WP\cms-tree-page-view/functions.php:1455
+msgid "I like this plugin<br>– how can I thank you?"
+msgstr "Мне нравится этот плагин<br> - как я могу отблагодарить Вас?"
+
+#: E:\Translate WP\cms-tree-page-view/functions.php:1456
+msgid "There are serveral ways for you to show your appreciation:"
+msgstr "Есть несколько способов, чтобы показать Вашу признательность:"
+
+#: E:\Translate WP\cms-tree-page-view/functions.php:1458
+#, php-format
+msgid ""
+"<a href=\"%1$s\">Give it a nice review</a> over at the WordPress Plugin "
+"Directory"
+msgstr "<a href=\"%1$s\">Дать хороший отзыв</a> в Каталоге Плагинов WordPress"
+
+#: E:\Translate WP\cms-tree-page-view/functions.php:1459
+#, php-format
+msgid "<a href=\"%1$s\">Give a donation</a> – any amount will make me happy"
+msgstr ""
+"<a href=\"%1$s\">Сделать пожертвование</a> – любая сумма сделает меня "
+"счастливым"
+
+#: E:\Translate WP\cms-tree-page-view/functions.php:1460
+#, php-format
+msgid ""
+"<a href=\"%1$s\">Post a nice tweet</a> or make a nice blog post about the "
+"plugin"
+msgstr ""
+"<a href=\"%1$s\">Написать хороший твит</a> ли сделать хороший блог о плагине"
+
+#: E:\Translate WP\cms-tree-page-view/functions.php:1463
+msgid "Support"
+msgstr "Поддержка"
+
+#: E:\Translate WP\cms-tree-page-view/functions.php:1464
+#, php-format
+msgid "Plese see the <a href=\"%1$s\">support forum</a> for help."
+msgstr "Читайте <a href=\"%1$s\">форум поддержки</a> для помощи."
+
+#: E:\Translate WP\cms-tree-page-view/functions.php:1468
+msgid "Hide until next upgrade"
+msgstr "Скрыть до следующего обновления"
