--- a/languages/cms-tree-page-view.pot
+++ b/languages/cms-tree-page-view.pot
@@ -2,19 +2,22 @@
 # This file is distributed under the same license as the  package.
 msgid ""
 msgstr ""
-"Project-Id-Version:  \n"
+"Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: http://wordpress.org/tag/cms-tree-page-view\n"
 "POT-Creation-Date: 2012-12-22 21:04:52+00:00\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"PO-Revision-Date: 2012-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"PO-Revision-Date: 2012-12-26 20:42+0100\n"
+"Last-Translator: Pär Thernström <par.thernstrom@gmail.com>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
+"X-Generator: Poedit 1.5.4\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
+"Language: sv_SE\n"
 
 #: functions.php:272
 msgid "Enter title of new page"
-msgstr ""
+msgstr "Ange titel på ny sida"
 
 #: functions.php:273
 msgid "child pages"
@@ -340,4 +343,4 @@ msgstr ""
 
 #: functions.php:1636
 msgid "Hide until next upgrade"
-msgstr ""
+msgstr "Göm tills nästa uppdatering"
