--- a/languages/cms-tree-page-view-ru_RU.po
+++ b/languages/cms-tree-page-view-ru_RU.po
@@ -5,8 +5,8 @@ msgstr ""
 "Project-Id-Version: CTPV\n"
 "Report-Msgid-Bugs-To: http://wordpress.org/tag/cms-tree-page-view\n"
 "POT-Creation-Date: 2012-12-23 11:26+0400\n"
-"PO-Revision-Date: 2012-12-23 11:29+0400\n"
-"Last-Translator: Вадим <vadim.bogaiskov@gmail.com>\n"
+"PO-Revision-Date: 2012-12-26 21:58+0100\n"
+"Last-Translator: Pär Thernström <par.thernstrom@gmail.com>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
